[package]
name = "rocket-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0", features =["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
cargo-watch = "8.4.0"
